--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@vee-validate/rules": "^4.7.3",
+    "firebase": "^8.10.0",
     "pinia": "^2.0.23",
     "vee-validate": "^4.7.3",
     "vue": "^3.2.41",
