--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "firebase": "^8.10.0",
     "pinia": "^2.0.23",
     "quill": "^1.3.7",
+    "quill-blot-formatter": "^1.0.5",
+    "quill-image-resize-module": "^3.0.0",
     "vee-validate": "^4.7.3",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
